# AtlasThingMiddleware_RPI

./: README.md
Architecture/: API_Generator.cpp  API_Generator.h  Attachment_Engine.cpp  Attachment_Engine.h  Communication_Manager.cpp  Communication_Manager.h  Identity_Parser.cpp  Identity_Parser.h  IoTDDL_Parser.cpp  IoTDDL_Parser.h  Knowledge_Tweeting_Manager.cpp  Knowledge_Tweeting_Manager.h  Objects_Engine.cpp  Objects_Engine.h  System_Functions.cpp  System_Functions.h  _DS_Store  architect.cmake
Architecture/GeneratedServices/ConsumerTemplate/: consumer.tpl
Architecture/GeneratedServices/ServiceTemplate/: service.tpl
Architecture/GeneratedServices/consumer/: Consumer.cpp  Makefile
Architecture/GeneratedServices/service/: Makefile  Service.cpp
Architecture/GeneratedServices/service/Morning_Alarm/: main.cpp  manifest.json  service.def
ConfigurationFiles/: Atlas_IoTDDL.xml
Main/: AtlasMain.cpp  CMakeLists.txt  cMServices.sh  readme
lib/CRYPTOPPLib/: cryptopp.cmake  test.cpp
lib/CoAPLib/: COAPLIB.cmake  cantcoap.cpp  nethelper.c
lib/OMALib/core/: AtlasAttachment_DataRepository.c  AtlasAttachment_VendorOnlineDoc.c  AtlasEntity_DescriptiveMetadata.c  AtlasEntity_Relationship.c  AtlasEntity_ResourceService.c  AtlasThing_AdministrativeMetadata.c  AtlasThing_Attachment.c  AtlasThing_DescriptiveMetadata.c  objectHandler.c  objectHandler.h  object_device.c  object_location.c  packet.c  system_api.c  test_object.c  wakaama.cmake
lib/OMALib/shared/: commandline.c  commandline.h  tinydtls.cmake
lib/PahoMQTT/: PAHOMQTT.cmake
lib/tinyxml/: tinyxml2.cmake
(+20 files in other folders)
